Stonebreak: Welcome back ladies and gentlemen, this is where i am going to leave project gaia for now, because these lakes have taken everything from me.
Lakes are "forming" but they are just big cubes of water, instead of regular lakes. there is some logic in there for how and where to spawn but it needs some work.